# luminarender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cpp  application.h  asset_library.cpp  asset_library.h  camera.cpp  camera.h  entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  frame_buffer.cpp  frame_buffer.h  imgui.ini  imgui_renderer.cpp  imgui_renderer.h  importer.cpp  importer.h  irradiance_map_factory.cpp  log.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  pch.h  primitives.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  uniform_buffer_object.cpp  uniform_buffer_object.h  window.cpp  (+1 more)
assets/: material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
components/: icomponent.h  light.cpp  light.h  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  transform.cpp  transform.h
core/: CMakeLists.txt
core/src/: camera.cpp  camera.h  irradiance_map_factory.cpp  irradiance_map_factory.h  log.h  window.cpp  window.h
core/src/assets/: asset_library.cpp  asset_library.h  importer.cpp  material.h  mesh.cpp  mesh.h  shader.h  texture.cpp
core/src/components/: components.h  mesh_renderer.h
core/src/events/: dispatcher.h
core/src/renderer/: frame_buffer.cpp  gfxapi.h  gpucommands.h  gpuresourcemanager.h  light_system.h  opengl.h  render_system.cpp  renderer.cpp  renderer.h  transform_system.cpp  uniform_buffer_object.cpp
editor/: CMakeLists.txt
editor/src/: application.cpp  application.h  main.cpp
editor/src/samples/: lighting_skybox_scene.cpp  lighting_skybox_scene.h  pbr_scene.cpp  pbr_scene.h
editor/src/ui/: debug_view.cpp  hierarchy_system.cpp  hierarchy_system.h  mainmenu_system.cpp  mainmenu_system.h  properties_system.cpp  properties_system.h  ui_renderer.cpp  ui_renderer.h  viewport_system.cpp  viewport_system.h
events/: dispatcher.cpp  dispatcher.h  event.h
include/assimp/: material.h
lib/assimp/: assimp
renderer/: forward_pass.cpp  forward_pass.h  irenderable.h  normal_visualizer_pass.cpp  normal_visualizer_pass.h  render_system.cpp  render_system.h  render_target.cpp  shadow_pass.cpp  shadow_pass.h
resources/shaders/: brdf.glsl  brdf_frag.glsl  brdf_vert.glsl  cook-torrance_frag.glsl  cook-torrance_vert.glsl  cook_torrance.glsl  gbuffer.glsl  lambert.fsh  lambert.glsl  lambert.vsh  lighting.glsl  lightingpass.glsl  normal_vector.glsl  normal_vector_frag.glsl  normal_vector_geo.glsl  normal_vector_vert.glsl  prefilter.glsl  prefilter_frag.glsl  shadow_depth.glsl  shadow_depth_geo.glsl  shadow_depth_vert.glsl  shadows.glsl  simple_shadow_depth.glsl  skybox.glsl  skybox_equirectangular.glsl  skybox_equirectangular_frag.glsl  skybox_equirectangular_vert.glsl  skybox_frag.glsl  skybox_irradiance.glsl  skybox_irradiance_frag.glsl  skybox_vert.glsl  skytriangle.glsl  ssao.glsl  ssao_blur.glsl  unlit.fsh  unlit.glsl  unlit.vsh
runtime/src/samples/: lighting_skybox_scene.cpp  lighting_skybox_scene.h  pbr_scene.h
samples/: lighting_skybox_scene.cpp  pbr_scene.cpp  sample_resources.h  sample_scene.cpp  sample_scene.h  unlit_scene.cpp  unlit_scene.h
src/: application.cpp  application.h  asset_library.cpp  asset_library.h  camera.cpp  camera.h  ecs.h  entity.cpp  entity.h  entity_factory.cpp  entity_factory.h  frame_buffer.cpp  imgui_renderer.cpp  importer.cpp  importer.h  irradiance_map_factory.cpp  irradiance_map_factory.h  log.h  main.cpp  primitives.h  renderer.h  scene.cpp  scene.h  uniform_buffer_object.cpp  window.cpp  window.h
src/assets/: asset_library.cpp  asset_library.h  importer.cpp  importer.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
src/components/: components.h  light.h  mesh_renderer.cpp  mesh_renderer.h  transform.cpp  transform.h
src/events/: dispatcher.h  event.h
src/renderer/: forward_pass.cpp  forward_pass.h  frame_buffer.cpp  frame_buffer.h  geometrypass.cpp  geometrypass.h  gfxapi.h  gpucommands.h  gpuresourcemanager.h  light_system.cpp  light_system.h  lightingpass.cpp  lightingpass.h  normal_visualizer_pass.cpp  normal_visualizer_pass.h  opengl.cpp  opengl.h  render_system.cpp  render_system.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h  shadow_pass.cpp  shadow_pass.h  transform_system.cpp  transform_system.h  uniform_buffer_object.cpp  uniform_buffer_object.h
src/samples/: lighting_skybox_scene.cpp  lighting_skybox_scene.h  pbr_scene.cpp  pbr_scene.h  sample_resources.h  unlit_scene.cpp  unlit_scene.h
src/ui/: debug_view.cpp  debug_view.h  hierarchy_panel.cpp  hierarchy_panel.h  hierarchy_system.cpp  hierarchy_system.h  mainmenu_system.cpp  mainmenu_system.h  panel.cpp  panel.h  properties_panel.cpp  properties_panel.h  properties_system.cpp  properties_system.h  ui_renderer.cpp  ui_renderer.h  viewport.cpp  viewport.h  viewport_system.cpp  viewport_system.h
ui/: hierarchy_panel.cpp  hierarchy_panel.h  properties_panel.cpp  properties_panel.h
